smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/enum-values/intEnum-with-bad-value.smithy
// smithy.example#Foo$BAR: intEnum members require integer values, but found: "Abc"
$version: "2.0"

namespace smithy.example

intEnum Foo {
    BAR = "Abc"
}
